{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 63,
  "lineage": "134a377b-3987-807f-c803-d20051a1ea0a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:vpc/vpc-0fe0cadc6a9add5f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062e14cb80be64151",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0db21715eed16e850",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe0cadc6a9add5f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1a7c945f90f9c59",
            "owner_id": "512937768351"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "challengevmad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085ad6ae776d8f09c",
            "arn": "arn:aws:ec2:us-east-1:512937768351:instance/i-07cc590d9a626d1f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cc590d9a626d1f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a6818a7ebed89b4",
            "private_dns": "ip-172-31-64-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.64.13",
            "public_dns": "ec2-3-235-198-182.compute-1.amazonaws.com",
            "public_ip": "3.235.198.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5d6fbc9481744a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08256b33eefe01ff9",
            "tags": {
              "Name": "challengevmad"
            },
            "tags_all": {
              "Name": "challengevmad"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018dee80ab1811642"
            ]
          },
          "dependencies": [
            "aws_security_group.admin_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:security-group/sg-018dee80ab1811642",
            "description": "Allow SSH from admins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018dee80ab1811642",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.1.1.1/32",
                  "8.8.8.8/32",
                  "86.246.169.34/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "admin_ssh",
            "name_prefix": "",
            "owner_id": "512937768351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin_ssh"
            },
            "tags_all": {
              "Name": "admin_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe0cadc6a9add5f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:security-group-rule/sgr-099bc97ba9336cdec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-099bc97ba9336cdec",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-018dee80ab1811642",
            "security_group_rule_id": "sgr-099bc97ba9336cdec",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:security-group-rule/sgr-0f639d3b1ee748313",
            "cidr_ipv4": "86.246.169.34/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f639d3b1ee748313",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-018dee80ab1811642",
            "security_group_rule_id": "sgr-0f639d3b1ee748313",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1.1.1.1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:security-group-rule/sgr-046532c7b287d0314",
            "cidr_ipv4": "1.1.1.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-046532c7b287d0314",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-018dee80ab1811642",
            "security_group_rule_id": "sgr-046532c7b287d0314",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "8.8.8.8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512937768351:security-group-rule/sgr-04e071dcc4f6cb061",
            "cidr_ipv4": "8.8.8.8/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04e071dcc4f6cb061",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-018dee80ab1811642",
            "security_group_rule_id": "sgr-04e071dcc4f6cb061",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}